Stuff for Netherlands

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -97,6 +97,13 @@
  HOL_Dutch_Industry_desc: "Dutch Industry embodies the Netherlands' legacy of innovation and excellence across various sectors. With a focus on sustainability, technology, and global competitiveness, Dutch industry remains at the forefront of driving economic growth and prosperity."
  HOL_Postbank_Fusion: "Postbank-ING Fusion"
  HOL_Postbank_Fusion_desc: "The fusion of Postbank and ING represents a milestone in Dutch banking history, consolidating two major financial institutions into a single entity. This merger strengthens ING's position as a leading global bank, offering enhanced services and financial solutions to customers worldwide."
+ HOL_Randstad_Takeovers: "Randstad Takovers"
+ HOL_Randstad_Takeovers_desc: "Randstad Takeovers demonstrate Dutch companies' strategic expansion and global ambitions in the staffing and recruitment industry. By acquiring key players in the market, Randstad reinforces its position as a leader in human resource solutions on a global scale."
+ HOL_Unilever_Consolidation: "Unilever Consolidation"
+ HOL_Unilever_Consolidation_desc: "Unilever Consolidation streamlines operations and enhances efficiency within one of the Netherlands' largest multinational corporations. By consolidating its business units, Unilever optimizes resources and strengthens its competitive position in the global market."
+ HOL_ING_Group_Strategy: "ING Group Expansion Strategies"
+ HOL_ING_Group_Strategy_desc: "ING Group Strategy outlines the bank's vision for sustainable growth and digital transformation in the financial sector. By embracing innovation and customer-centric solutions, ING reaffirms its commitment to driving positive change and delivering value to stakeholders."
+ HOL_ING_Group_Strategy_Decision_Unlock_TT: "Unlocks §Y$HOL_ING_Group_strategy_category_desc$§! decisions, allowing us to invest in strategies of the ING Bank, increasing the §benefits§! provided by the National Spirit §Y$HOL_ING_Group_Strategies_modifier$§!."
  ###Military
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
@@ -133,8 +140,6 @@
  HOL_Water_Sector1_desc: "The Dutch water sector is globally recognized for its expertise in water management, driven by the Netherlands' unique geography, where much of the land lies below sea level. Dutch engineers and companies are leaders in developing innovative solutions for flood control, water purification, and sustainable water use. The country has pioneered the construction of advanced infrastructure like dikes, storm surge barriers, and polder systems, which are crucial for managing water levels and preventing floods. Internationally, the Dutch water sector is highly respected, with Dutch experts frequently involved in global projects related to coastal protection, urban water management, and climate adaptation. This combination of cutting-edge technology, centuries of experience, and a commitment to sustainability makes the Dutch water sector a vital contributor to addressing global water challenges."
  HOL_Project_Beethoven_State_Idea: "Project Beethoven"
  HOL_Project_Beethoven_State_Idea_desc: "Project Beethoven is a major initiative by the Dutch government, in collaboration with regional authorities, to invest strengthening the business climate and infrastructure for the microchip sector in Brainport Eindhoven. The project aims to bolster the region's global competitiveness in semiconductor technology by addressing critical needs such as talent development, infrastructure improvements, and housing. This investment is seen as essential to maintaining the Netherlands' position as a leading hub for the high-tech industry, with specific emphasis on retaining key players like ASML in the country."
- HOL_ING1: "ING Group"
- HOL_ING1_desc: "ING Group, a multinational banking and financial services corporation based in the Netherlands, is one of the largest and most influential banks in Europe. With its headquarters in Amsterdam, ING operates in over 40 countries, providing a wide range of services including retail banking, direct banking, commercial banking, investment banking, asset management, and insurance. ING is known for its innovative approach to digital banking, being one of the pioneers of online banking services. "
  HOL_SGM: "Spring Global Mail"
  HOL_SGM_desc: "Spring Global Mail is an international mail and logistics provider, originally established as a joint venture between TNT Post (now PostNL) and Royal Mail. The company specializes in cross-border mail solutions, offering services that include the delivery of parcels, direct mail, and business mail worldwide. Spring Global Mail is known for its expertise in managing international mail flows, leveraging a network that spans over 190 countries. The company serves businesses of all sizes, providing tailored solutions for e-commerce, direct marketing, and global business correspondence, with a strong focus on efficiency, reliability, and cost-effectiveness."
  HOL_Randstad_Economy1: "Randstad Economie"
@@ -227,6 +232,20 @@
  HOL_Change_Army_Spirit_TT: "Modify §HKoninklijke Landmacht§! by \n"
  HOL_Kringlooplandbouw_modifier: "Kringlooplandbouw Province"
  HOL_Randstad_Productivity: "Randstad Power"
+ HOL_ING_Group_Strategies_modifier: "ING Group"
+ HOL_ING_Group_Strategies_modifier_desc: "ING Group, a multinational banking and financial services corporation based in the Netherlands, is one of the largest and most influential banks in Europe. With its headquarters in Amsterdam, ING operates in over 40 countries, providing a wide range of services including retail banking, direct banking, commercial banking, investment banking, asset management, and insurance. ING is known for its innovative approach to digital banking, being one of the pioneers of online banking services. "
+ HOL_Change_ING_Spirit_TT: "Modify §HING Group§! by \n"
+ HOL_Postbank_ING_gain_modifier_tt: "Add §HING Group§!, which grants ( £construction_speed_texticon §Y$offices$§! construction speed: [?0.05|%+] , §Y£corporate_tax_income_multiplier_modifier_texticon §YCorporate Tax Revenue§! Multiplier: [?0.05|%+] , £corporate_tax_income_multiplier_modifier_texticon §Y$offices$§! Tax Revenue Multiplier: [?0.05|%+] )"
+ HOL_production_speed_offices_factor: "£construction_speed_texticon §Y$offices$§! construction speed"
+ HOL_production_speed_offices_factor_tt: "£reinforce_texticon  Reinforce Rate: [?HOL_production_speed_offices_factor_change|%+] \n "
+ HOL_corporate_tax_income_multiplier_modifier: "£corporate_tax_income_multiplier_modifier_texticon §YCorporate Tax Revenue§! Multiplier"
+ HOL_corporate_tax_income_multiplier_modifier_tt: "£corporate_tax_income_multiplier_modifier_texticon §YCorporate Tax Revenue§! Multiplier: [?HOL_corporate_tax_income_multiplier_modifier_change|%+] \n "
+ HOL_office_park_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$offices$§! Tax Revenue Multiplier"
+ HOL_office_park_income_tax_modifier_tt: "£corporate_tax_income_multiplier_modifier_texticon §Y$offices$§! Tax Revenue Multiplier: [?HOL_office_park_income_tax_modifier_change|%+] \n "
+ HOL_buildings_worker_requirement_modifier: "All Buildings Worker Requirements"
+ HOL_buildings_worker_requirement_modifier_tt: "All Buildings Worker Requirements: [?HOL_buildings_worker_requirement_modifier_change|%+] \n "
+ HOL_corruption_cost_factor: "£corruption_cost_factor_texticon Cost to change Corruption"
+ HOL_corruption_cost_factor_tt: "£corruption_cost_factor_texticon Cost to change Corruption: [?HOL_corruption_cost_factor_change|%+] \n "
  ### Events
  HOL_Borsele.t: "Borsele Renovation Plans"
  HOL_Borsele.d: "The future of the Borssele nuclear reactor is in your hands. You have two options: expand the reactor's capacity to increase nuclear energy output or refurbish it into a state-of-the-art clean coal plant. Expanding the reactor will boost energy efficiency and innovation, while converting to clean coal will enhance industrial capacity and stability. Choose wisely, as this decision will shape the energy landscape of the Netherlands."
@@ -271,3 +290,7 @@
  HOL.Provincial_Railways.306.a: "Only Reconstruct Maastricht Station"
  HOL.Provincial_Railways.306.b: "Use Funds to invest in the Amsterdam - Maastricht Line"
  HOL.Provincial_Railways.306.c: "They really hate reliable trains"
+
+ ### Decisions
+ HOL_ING_Group_strategy_category: "ING Group Strategies"
+ HOL_ING_Group_strategy_category_desc: ""
