--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -103,7 +103,7 @@
  HOL_Unilever_Consolidation_desc: "Unilever Consolidation streamlines operations and enhances efficiency within one of the Netherlands' largest multinational corporations. By consolidating its business units, Unilever optimizes resources and strengthens its competitive position in the global market."
  HOL_ING_Group_Strategy: "ING Group Expansion Strategies"
  HOL_ING_Group_Strategy_desc: "ING Group Strategy outlines the bank's vision for sustainable growth and digital transformation in the financial sector. By embracing innovation and customer-centric solutions, ING reaffirms its commitment to driving positive change and delivering value to stakeholders."
- HOL_ING_Group_Strategy_Decision_Unlock_TT: "Unlocks §Y$HOL_ING_Group_strategy_category_desc$§! decisions, allowing us to invest in strategies of the ING Bank, increasing the §benefits§! provided by the National Spirit §Y$HOL_ING_Group_Strategies_modifier$§!."
+ HOL_ING_Group_Strategy_Decision_Unlock_TT: "Unlocks §Y$HOL_ING_Group_strategy_category_desc$§! decisions, allowing us to invest in strategies of the ING Bank, increasing the §Ybenefits§! provided by the National Spirit §Y$HOL_ING_Group_Strategies_modifier$§!."
  ###Military
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
