--- a/localisation/english/MD_War_on_terror_content_l_english.yml
+++ b/localisation/english/MD_War_on_terror_content_l_english.yml
@@ -186,7 +186,7 @@
  wotnews.14.t: "US Withdraws Troops From Iraq"
  wotnews.14.d: "The last convoy of U.S. soldiers pulled out of Iraq, ending nearly nine years of war that inflicted many casualties on both sides, and left a country grappling with political uncertainty. The final column of around 100 mostly U.S. military MRAP armoured vehicles carrying 500 U.S. troops trundled across the southern Iraq desert from their last base through the night and daybreak along an empty highway to the Kuwaiti border. For the United States, the military pullout is the fulfilment of a promise to bring troops home from a conflict, widely considered the most unpopular war since Vietnam and one that tainted America’s standing worldwide. For Iraqis, though, the departure brings a sense of sovereignty tempered by nagging fears their country may slide once again into the kind of sectarian violence that killed many thousands of people at its peak in 2006-2007."
  wotnews.14.a: "Will Iraq finally find peace?"
- wotnews.15.t: "United States Captures Osama bin Laden"
+ wotnews.15.t: "United States Captured Osama bin Laden"
  wotnews.15.d: "Today, the [USA.GetAdjective] government announced that they had captured Osama bin Laden in Afghanistan. Bin Laden was the main mastermind behind the terrorist attack in the United States. With help from local Taliban informants, the US special forces raided bin Laden's compound. It is reported that he surrendered without a fight when faced with the special forces."
  wotnews.15.a: "Interesting"
  wotnews.16.t: "Osama bin Laden Killed"
