--- a/localisation/english/MD_tooltips_l_english.yml
+++ b/localisation/english/MD_tooltips_l_english.yml
@@ -543,13 +543,13 @@
  CHI_arunachal_border_conflict_TT: "§YThis will enable the Arunachal border war with§! §B[RAJ.GetName]§!"
  CHI_unlock_african_countries_SCO_TT: "If you completed the focus §Y$CHI_Form_the_SCO$§!, this focus will allow more §YAfrican countries§! to join the §YSCO§!."
  CHI_SCO_Exploit_Economic_Clout_TT: "This §Yfocus§! will increase §Y[CHI.GetFlag]China's influence§! in all §YSCO§! member countries."
- arunachal_tension_TT: "Tension is higher then 80"
- arunachal_readiness_TT: "Our Readiness is higher then 60"
+ arunachal_tension_TT: "Tension is higher than 80"
+ arunachal_readiness_TT: "Our Readiness is higher than 60"
  arunachal_increase_readiness_TT: "§GThis will increase our readiness§!"
  arunachal_increase_tension_TT: "§YThis will increase border tension§!"
  not_attacking_on_arunachal_TT: "Currently attacking or preparing an attack"
- more_than_50_arunachal_progress_TT: "More then 50 conflict progress"
- more_than_80_arunachal_progress_TT: "More then 80 conflict progress"
+ more_than_50_arunachal_progress_TT: "More than 50 conflict progress"
+ more_than_80_arunachal_progress_TT: "More than 80 conflict progress"
  arunachal_readiness_minus_10_TT: "§RThis will decrease our readiness by 10§!"
  Arunachal_war_increase_progress_10_TT: "§GThis will increase our progress by 10§!"
  Arunachal_war_increase_progress_5_TT: "§RThis will increase our progress by 5§!"
