--- a/localisation/english/MD_focus_TUR_l_english.yml
+++ b/localisation/english/MD_focus_TUR_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  turkey_focus: "Turkish Focus Tree"
  #Ideas
+ TUR_supply_distruption: "Logistical Problems"
  TUR_APC_TECH: "APC Technology"
  TUR_industry: "Industrial Technology"
  TUR_AFV_TECH: "AFV Technology"
@@ -214,6 +215,9 @@
  TUR_minority_government: "Minority Government"
  TUR_minority_government_desc: "Our government currently doesn't hold a majority of the parliament seats, making decision making very difficult"
  #Tooltips
+ TUR_lower_effectiveness_10_TT: "Decreases our §HEffectiveness§! by §R-10%§!"
+ TUR_2X_LOSS_TT: "§H50% Chance§! we lose a §H2X More§! Equipment"
+ TUR_AIR_LOSS_TT: "§H50% Chance§! we lose a §HTransport Aircraft§!"
  TUR_PKK_DAMAGE_1000_TT: "Eliminating §H1000§! §HPKK Insurgents§!"
  TUR_PKK_DAMAGE_900_TT: "Eliminating §H900§! §HPKK Insurgents§!"
  TUR_PKK_DAMAGE_800_TT: "Eliminating §H800§! §HPKK Insurgents§!"
@@ -1711,6 +1715,12 @@
  TUR_pkk.100.b: "Distrupt their supply lines"
  TUR_pkk.100.c: "Pepper them with artillery"
  TUR_pkk.100.d1: "We can sit this one out"
+
+ TUR_pkk.200.t: "Troops Run Low on Supplies"
+ TUR_pkk.200.d: "Reports coming from the front at [ROOT.TUR_PKK_bases_name] are indicating a shortage of supplies, signaling a potential of failure in our operational ability to do damage against the PKK. We can send the troops at the front lines their much needed equipment, but we must also remember to maintain our own supplies for any potential conflict that looms in the international stage."
+ TUR_pkk.200.a: "Airlift them whatever they need"
+ TUR_pkk.200.b: "Give equipment to trustworthy locals to transport"
+ TUR_pkk.200.c: "They can use what they have now"
 
  Turkey.1.t: "Özkan Forms a New Party"
  Turkey.1.desc: "After [ROOT.GetLeader] publically called out the deputy Prime Minister, Özkan announced that he was resigning from his position in the parliament and in the party. He also announced that he would be forming a new party, the New Turkey Party. Many current §W[socialism_L]§! MPs have already announced intention of joining him, and many are also trying to join the §W[conservatism_L]§!."
