--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -3575,18 +3575,17 @@ germany_foci.1349.b_desc: "While the MAUSS MBT offers cutting-edge capabilities,
  GER_default_left_side: "Multiculturalism"
  GER_default_right_side: "Leading Culture"
  GER_mid_range: "Balanced"
- GER_1_left_side_range: "Militaristic Ideals"
- GER_left_side_range: "Pushing for Militarism"
- GER_middle_left_side_range: "Strong Militarism"
- GER_far_left_side_range: "Militarist Government"
- GER_coup_left_side_range: "Total Militarism"
- GER_1_right_side_range: "Light Demilitarization"
- GER_right_side_range: "Anti Militarist Stance"
- GER_middle_right_side_range: "Strong Anti Militarism"
- GER_far_right_side_range: "Suppressing Militaristst"
- GER_coup_right_side_range: "Total Pacifism"
- GER_Anti_Militarism: "Anti Militarism"
- GER_Militarism: "Absolute Militarism"
+ GER_1_left_side_range: "Intercultural Exchange"
+ GER_left_side_range: "Inclusive Society"
+ GER_middle_left_side_range: "Immigrant Integration"
+ GER_far_left_side_range: "Cultural innovation"
+ GER_Militarism: "Cultural Pluralism"
+ GER_1_right_side_range: "Volksgemeinschaft"
+ GER_right_side_range: "Cultural Purity"
+ GER_middle_right_side_range: "National Heritage"
+ GER_far_right_side_range: "Ethnic Unity"
+ GER_Anti_Militarism: "Cultural Conformity"
+ 
  GER_crack_down_on_radicals: "Expose Radical Personnel"
  GER_crack_down_on_radicals_desc: "We can publicly expose radical elements within in our army to show the people the dangers of militarism!"
  GER_increase_nato_reliance: "Increase Reliance on NATO"
@@ -3843,8 +3842,8 @@ Drones: "Drones"
  GER_New_Airdefence: "New Air Defense Systems"
  GER_New_Airdefence_desc: "The Bundeswehr is committed to upgrading its air defense capabilities starting in 2000. This initiative focuses on the integration of new, advanced air defense systems designed to protect German airspace from potential aerial threats. The development includes deploying state-of-the-art radar systems, advanced missile interceptors, and enhanced command and control systems to ensure robust protection against both conventional and asymmetric aerial attacks."
  
- GER_future_projects_MR: "Future Mechanized Reconnaissance Projects"
- GER_future_projects_MR_desc: "From 2000, the Bundeswehr is advancing its mechanized reconnaissance capabilities through the development of future-oriented projects. This includes the design and integration of new reconnaissance vehicles equipped with enhanced sensors, communication systems, and mobility features. The goal is to improve reconnaissance effectiveness, enabling better battlefield awareness and faster, more accurate intelligence for operational planning and execution."
+ GER_future_projects_MR: "Future Multi Role Fighter Projects"
+ GER_future_projects_MR_desc: "From 2000, the Bundeswehr is advancing its Multi Role Fighter through the development of future-oriented projects. This includes the design and integration of new reconnaissance vehicles equipped with enhanced sensors, communication systems, and mobility features. The goal is to improve reconnaissance effectiveness, enabling better battlefield awareness and faster, more accurate intelligence for operational planning and execution."
  
  GER_future_projects_CAS: "Future Close Air Support Projects"
  GER_future_projects_CAS_desc: "The Bundeswehr is focusing on future close air support (CAS) projects beginning in 2000. This includes the development of advanced CAS aircraft and supporting systems designed to provide precise and effective firepower in support of ground operations. The initiative emphasizes improving aircraft capabilities for precision strikes, integration with ground forces, and enhanced targeting technologies to ensure superior close air support in diverse combat environments."
@@ -4314,3 +4313,108 @@ Drones: "Drones"
  GER_Space_and_Cyber_Integration: "Space and Cyber Integration"
  GER_Space_and_Cyber_Integration_desc: "From 2000, the Bundeswehr is working on integrating space and cyber capabilities. This includes developing strategies and technologies to enhance coordination between space operations and cyber operations. The objective is to improve overall operational effectiveness through combined space and cyber capabilities."
  
+ GER_Naval_Air_rec: "Naval Air Reconnaissance"
+ GER_Naval_Air_rec_desc: "From 2000, the Bundeswehr is enhancing its naval air reconnaissance capabilities. This includes upgrading aircraft and technologies for maritime surveillance and intelligence gathering. The objective is to improve situational awareness and the ability to monitor and secure naval operational areas."
+ 
+ GER_Airsuperiority_focus: "Air Superiority Focus"
+ GER_Airsuperiority_focus_desc: "Beginning in 2000, the Bundeswehr is emphasizing air superiority. This involves developing tactics, training, and technologies to dominate the airspace. The goal is to ensure control of the skies and provide a strategic advantage in aerial operations."
+ 
+ GER_Improve_Radarcapability: "Improve Radar Capability"
+ GER_Improve_Radarcapability_desc: "The Bundeswehr is focusing on improving radar capabilities starting in 2000. This includes upgrading radar systems and incorporating advanced detection technologies. The objective is to enhance air defense, early warning, and target acquisition capabilities."
+ 
+ GER_Improve_fighter_training: "Improve Fighter Training"
+ GER_Improve_fighter_training_desc: "From 2000, the Bundeswehr is enhancing fighter pilot training programs. This involves developing advanced training scenarios, incorporating new simulation technologies, and refining aerial combat tactics. The goal is to ensure pilots are highly skilled and prepared for modern air combat challenges."
+ 
+ GER_modernice_Special_forces: "Modernize Special Forces"
+ GER_modernice_Special_forces_desc: "Beginning in 2000, the Bundeswehr is modernizing its special forces. This includes updating equipment, refining tactics, and enhancing training programs. The objective is to ensure that special forces are equipped and capable of handling diverse and high-risk missions."
+ 
+ GER_Expand_KSK: "Expand KSK"
+ GER_Expand_KSK_desc: "The Bundeswehr is expanding the Kommando Spezialkräfte (KSK) starting in 2000. This involves increasing personnel, enhancing training, and broadening operational capabilities. The goal is to strengthen Germany’s capacity for special operations and counter-terrorism missions."
+ 
+ GER_Expand_SEK_M: "Expand SEK M"
+ GER_Expand_SEK_M_desc: "From 2000, the Bundeswehr is expanding the Special Deployment Commando of the Navy (SEK M). This expansion includes increasing personnel and capabilities for maritime special operations. The objective is to enhance the ability to conduct specialized naval operations, including boarding and counter-piracy missions."
+ 
+ GER_Introduce_EGB: "Introduce EGB"
+ GER_Introduce_EGB_desc: "The Bundeswehr is introducing the Einsatzgruppenversorgungsbataillone (EGB) starting in 2000. This involves establishing specialized battalions for rapid deployment and support. The goal is to enhance operational flexibility and ensure effective logistical support during rapid response missions."
+ 
+ GER_Improve_special_forces_training: "Improve Special Forces Training"
+ GER_Improve_special_forces_training_desc: "Beginning in 2000, the Bundeswehr is improving special forces training programs. This includes incorporating advanced combat techniques, specialized equipment, and realistic scenario-based training. The objective is to ensure special forces are prepared for a wide range of high-intensity operations."
+ 
+ GER_Update_rec_forces: "Update Reconnaissance Forces"
+ GER_Update_rec_forces_desc: "The Bundeswehr is updating its reconnaissance forces starting in 2000. This includes enhancing intelligence gathering capabilities, integrating new surveillance technologies, and improving coordination with other military branches. The goal is to provide comprehensive and timely situational awareness."
+ 
+ GER_Specialiced_terrain_training: "Specialized Terrain Training"
+ GER_Specialiced_terrain_training_desc: "From 2000, the Bundeswehr is implementing specialized terrain training. This includes developing training programs focused on operating in diverse and challenging environments such as urban areas, forests, and mountains. The objective is to enhance the adaptability and effectiveness of troops in various terrain conditions."
+ 
+ GER_Introduce_drone_rec_troop: "Introduce Drone Reconnaissance Troop"
+ GER_Introduce_drone_rec_troop_desc: "Beginning in 2000, the Bundeswehr is introducing dedicated drone reconnaissance troops. This initiative involves establishing units specialized in operating UAVs for surveillance and intelligence gathering. The goal is to enhance reconnaissance capabilities and provide real-time information on the battlefield."
+ 
+ GER_FAC_training: "Forward Air Controller Training"
+ GER_FAC_training_desc: "The Bundeswehr is enhancing Forward Air Controller (FAC) training starting in 2000. This includes developing specialized training programs for FACs to effectively coordinate air support in combat situations. The objective is to improve the integration of air and ground operations for precise and effective air strikes."
+ 
+ GER_modernice_REC_network: "Modernize REC Network"
+ GER_modernice_REC_network_desc: "From 2000, the Bundeswehr is modernizing its reconnaissance, electronic warfare, and communications (REC) network. This involves upgrading communication systems, improving data sharing, and integrating advanced electronic warfare capabilities. The goal is to enhance the overall effectiveness and resilience of REC operations."
+ 
+ GER_additional_Constructeur: "Additional Constructor Capacity"
+ GER_additional_Constructeur_desc: "The Bundeswehr is increasing its capacity with additional constructors starting in 2000. This includes expanding the infrastructure and technical capabilities for vehicle and equipment construction. The objective is to support the modernization and maintenance of military assets efficiently."
+ 
+ GER_Flensburger_Fahrzeugbau_I: "Flensburger Fahrzeugbau Initiative"
+ GER_Flensburger_Fahrzeugbau_I_desc: "Beginning in 2000, the Bundeswehr is launching the Flensburger Fahrzeugbau Initiative. This initiative focuses on collaborating with the Flensburger Fahrzeugbau company to develop and produce advanced military vehicles. The goal is to enhance the mobility and protection of ground forces."
+ 
+ GER_Armored_Car_Systems_I: "Armored Car Systems Initiative"
+ GER_Armored_Car_Systems_I_desc: "The Bundeswehr is initiating the Armored Car Systems program starting in 2000. This program focuses on developing and acquiring advanced armored cars for various military applications. The objective is to improve mobility, protection, and versatility of armored vehicles in different operational scenarios."
+ 
+ GER_MAN_again: "MAN Again"
+ GER_MAN_again_desc: "From 2000, the Bundeswehr is renewing its partnership with MAN for the development and procurement of military transport vehicles. This includes modernizing existing fleets and introducing new models. The goal is to enhance logistical support and ensure reliable transportation capabilities."
+ 
+ GER_Improved_logistics: "Improved Logistics"
+ GER_Improved_logistics_desc: "The Bundeswehr is focusing on improving logistics starting in 2000. This includes streamlining supply chains, enhancing transport capabilities, and optimizing logistical processes. The objective is to ensure efficient and timely support for military operations."
+ 
+ GER_KRK_army: "KRK Army"
+ GER_KRK_army_desc: "Beginning in 2000, the Bundeswehr is developing the Krisenreaktionskräfte (KRK) Army. This involves establishing crisis reaction forces capable of rapid deployment and response. The goal is to enhance Germany’s ability to respond quickly to international crises and emergencies."
+ 
+ GER_Rapid_deployment_doctrine: "Rapid Deployment Doctrine"
+ GER_Rapid_deployment_doctrine_desc: "The Bundeswehr is implementing a rapid deployment doctrine starting in 2000. This doctrine focuses on enhancing the ability to quickly mobilize and deploy forces to respond to emerging threats. The objective is to ensure a swift and effective military response in crisis situations."
+ 
+ GER_Integrated_command_and_control: "Integrated Command and Control"
+ GER_Integrated_command_and_control_desc: "From 2000, the Bundeswehr is focusing on integrated command and control systems. This includes developing and implementing technologies and procedures for cohesive command structures across different branches and units. The goal is to enhance coordination and decision-making in joint operations."
+ 
+ GER_Strengthen_infantry_training: "Strengthen Infantry Training"
+ GER_Strengthen_infantry_training_desc: "Beginning in 2000, the Bundeswehr is strengthening infantry training programs. This involves updating training curricula, incorporating new combat tactics, and enhancing physical and mental preparedness. The objective is to ensure infantry units are well-trained and capable of handling a variety of combat scenarios."
+ 
+ GER_mobile_Warfare_doctrine: "Mobile Warfare Doctrine"
+ GER_mobile_Warfare_doctrine_desc: "The Bundeswehr is adopting a mobile warfare doctrine starting in 2000. This doctrine emphasizes flexibility, speed, and maneuverability in military operations. The goal is to enhance the ability to conduct rapid and effective offensive and defensive operations."
+ 
+ GER_Advanced_Armor_Tactics: "Advanced Armor Tactics"
+ GER_Advanced_Armor_Tactics_desc: "From 2000, the Bundeswehr is focusing on advanced armor tactics. This includes developing and refining strategies for armored units to operate effectively in modern combat environments. The objective is to enhance the offensive and defensive capabilities of armored forces."
+ 
+ GER_Rapid_Armor_deployment: "Rapid Armor Deployment"
+ GER_Rapid_Armor_deployment_desc: "The Bundeswehr is emphasizing rapid armor deployment starting in 2000. This involves creating protocols and training programs for the quick mobilization and deployment of armored units. The goal is to ensure armored forces can respond swiftly to emerging threats."
+
+ GER_Update_Mechaniced_Units: "Update Mechanized Units"
+ GER_Update_Mechaniced_Units_desc: "Starting in 2000, the  Bundeswehr is updating its mechanized units to improve  mobility and firepower. This involves upgrading existing  vehicles with advanced armor, communication systems, and  weaponry. The objective is to enhance the operational  effectiveness and survivability of mechanized infantry in  diverse combat scenarios."
+ 
+ GER_Global_intervention: "Global Intervention"
+ GER_Global_intervention_desc: "The Bundeswehr is developing  capabilities for global intervention beginning in 2000. This  strategic shift includes preparing forces for rapid deployment  to international conflict zones. The goal is to support global  peacekeeping missions, humanitarian assistance, and crisis  response operations."
+ 
+ GER_Air_mobility_exercise: "Air Mobility Exercise"
+ GER_Air_mobility_exercise_desc: "From 2000, the Bundeswehr is  conducting air mobility exercises to enhance the rapid  deployment capabilities of its forces. These exercises focus  on the use of transport aircraft, helicopters, and airborne  troops. The aim is to ensure that German forces can be quickly  and effectively deployed to any location."
+ 
+ GER_Introduce_Medium_Forces: "Introduce Medium Forces"
+ GER_Introduce_Medium_Forces_desc: "Beginning in 2000, the  Bundeswehr is introducing medium-weight forces to bridge the  gap between light infantry and heavy armored units. These  forces will be equipped with versatile vehicles and weapons  suitable for various operations, providing a balance of  mobility, protection, and firepower."
+ 
+ GER_Bundeswehr_2.0: "Bundeswehr 2.0"
+ GER_Bundeswehr_2.0_desc: "The Bundeswehr is embarking on a  comprehensive modernization program referred to as 'Bundeswehr  2.0' starting in 2000. This initiative focuses on  restructuring the organization, upgrading equipment, and  implementing new technologies. The goal is to create a more  agile, efficient, and technologically advanced military force  for the 21st century."
+ 
+ GER_NEW_depardments: "Establish New Departments"
+ GER_NEW_depardments_desc: "From 2000, the Bundeswehr is  establishing new departments to handle emerging military  challenges. This includes departments dedicated to cyber  warfare, space operations, and joint inter-service  coordination. The objective is to ensure the Bundeswehr can  effectively manage new domains of conflict and enhance  operational synergy."
+ 
+ GER_handle_asymetrick_threat: "Handle Asymmetric Threats"
+ GER_handle_asymetrick_threat_desc: "The Bundeswehr is focusing  on strategies to handle asymmetric threats beginning in 2000.  This includes counter-insurgency training, intelligence  operations, and rapid response units specialized in  unconventional warfare. The goal is to prepare the military  for conflicts where traditional tactics may be ineffective."
+ 
+ GER_Coasteal_and_open_sea_defense: "Coastal and Open Sea  Defense"
+ GER_Coasteal_and_open_sea_defense_desc: "Starting in 2000, the  Bundeswehr is enhancing its coastal and open sea defense  capabilities. This initiative includes acquiring advanced  naval vessels, upgrading coastal surveillance systems, and  developing strategies for littoral and blue-water operations.  The objective is to protect Germany’s maritime interests and  secure critical sea lanes."
+ 
+ GER_Naval_training_expansion: "Naval Training Expansion"
+ GER_Naval_training_expansion_desc: "The Bundeswehr is  expanding its naval training programs beginning in 2000. This  includes constructing new training facilities, incorporating  modern simulators, and developing specialized courses for  various naval roles. The aim is to ensure that naval personnel  are highly skilled and prepared for complex maritime  operations."
+
