--- a/localisation/english/MD_focus_TUR_l_english.yml
+++ b/localisation/english/MD_focus_TUR_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  turkey_focus: "Turkish Focus Tree"
  #Ideas
+ TUR_scorched_earth_tactics: "Scorched Earth Tactics"
  TUR_supply_distruption: "Logistical Problems"
  TUR_APC_TECH: "APC Technology"
  TUR_industry: "Industrial Technology"
@@ -1721,6 +1722,16 @@
  TUR_pkk.200.a: "Airlift them whatever they need"
  TUR_pkk.200.b: "Give equipment to trustworthy locals to transport"
  TUR_pkk.200.c: "They can use what they have now"
+ TUR_pkk.201.t: "PKK Entrench Themselves in Residential Area"
+ TUR_pkk.201.d: "The PKK have decided to set up defensive positions in a residential area, putting civilians at risk. We must figure out a way to take out these insurgents without causing a major disturbance in the area, else we could risk our reputation and the lives of those who wish nothing but to be left alone."
+ TUR_pkk.201.a: "Call up the Commando Units"
+ TUR_pkk.201.b: "Try and strike at night"
+ TUR_pkk.201.c: "Just launch an attack!"
+ TUR_pkk.202.t: "PKK Launch Counter-Offensive"
+ TUR_pkk.202.d: "The PKK have decided to launch a major counter-offensive on the city of [ROOT.TUR_PKK_bases_name], resulting in some disorder and a sense of fear amongst some of the troops. However, now is not the time to run around like headless chickens, but rather it is time for us to evaluate our next steps. The high command in charge of operations has been notified and are awaiting orders."
+ TUR_pkk.202.a: "Respond to them with an offensive of our own"
+ TUR_pkk.202.b: "Dig in and prepare for the assault"
+ TUR_pkk.202.c: "Use scorched earth tactics and fall back"
 
  Turkey.1.t: "Özkan Forms a New Party"
  Turkey.1.desc: "After [ROOT.GetLeader] publically called out the deputy Prime Minister, Özkan announced that he was resigning from his position in the parliament and in the party. He also announced that he would be forming a new party, the New Turkey Party. Many current §W[socialism_L]§! MPs have already announced intention of joining him, and many are also trying to join the §W[conservatism_L]§!."
