More Moroccan Work

--- a/localisation/english/MD_focus_MOR_l_english.yml
+++ b/localisation/english/MD_focus_MOR_l_english.yml
@@ -815,6 +815,10 @@ l_english:
  MOR_expanded_fossil_fuel_industries_desc: "Expanded Fossil Fuel Industries"
  MOR_reinforced_energy_grid: "Reinforced Energy Grid "
  MOR_reinforced_energy_grid_desc: "Reinforced Energy Grid"
+ MOR_geothermal_exploitation: "Geothermal Exploitation"
+ MOR_geothermal_exploitation_desc: ""
+ MOR_the_bounty_of_atlas: "The Geothermal Bounty of Atlas"
+ MOR_the_bounty_of_atlas_desc: ""
  MOR_fezzian_atom: "Fezzian Atom "
  MOR_fezzian_atom_desc: "Fezzian Atom"
  MOR_a_nuclear_morocco: "A Nuclear Morocco "
@@ -893,8 +897,8 @@ l_english:
  MOR_the_moroccan_call_centers_desc: "The Moroccan Call Centers"
  MOR_a_leader_in_africom: "A Leader In Africom "
  MOR_a_leader_in_africom_desc: "A Leader In Africom"
- MOR_5G_investments: "5g Investments "
- MOR_5G_investments_desc: "5g Investments"
+ MOR_5G_investments: "5G Investments"
+ MOR_5G_investments_desc: "We are currently stalling behind other developed nations in terms of the investments in our network. Investing and expanding our interests into expanding and upgrading our network to 5G is imperative for bringing us forward into the future."
  MOR_the_private_lending_dilemma: "The Private Lending Dilemma "
  MOR_the_private_lending_dilemma_desc: "The Private Lending Dilemma"
  MOR_cradle_of_the_maghreb: "Cradle Of The Maghreb "
@@ -1048,6 +1052,10 @@ l_english:
  MOR_and_the_rest_of_africa: "And The Rest Of Africa "
  MOR_and_the_rest_of_africa_desc: "And The Rest Of Africa"
 
+
+ # Country Ideas
+ MOR_the_bounty_of_the_mountains_idea: "The Bounty of the Mountains"
+ MOR_the_bounty_of_the_mountains_idea_desc: "The various mountains of Morocco are beaming with resources ranging from gold to copper to lithium to more. It is imperative we continue to exploit the bounty the Earth has provided the people of our great country."
  # Country Flags
  MOR_the_royal_family_executed: "The Royal Moroccan Family Has Been Executed"
 
