--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -2220,6 +2220,7 @@
  energy_use_modifier_civs: "§Y$industrial_complex$§! Power Consumption"
  energy_use_modifier_offices: "§Y$offices$§! Power Consumption"
  energy_use_modifier_mils: "§Y$arms_factory$§! & §Y$dockyard$§! Power Consumption"
+ energy_use_modifier_agriculture_district: "§Y$agriculture_district$§! Power Consumption"
  state_renewable_capacity_factor_modifier: "Renewable Capacity Factor"
  state_renewable_energy_generation_modifier: "State Renewable Power Generation Factor"
  energy_gain: "Electrical Power"
