--- a/localisation/braz_por/MD_tooltips_l_braz_por.yml
+++ b/localisation/braz_por/MD_tooltips_l_braz_por.yml
@@ -471,13 +471,13 @@
  CHI_moonbase_chain_start_tt: "Isso iniciará a cadeia de eventos de construção da base lunar.§!"
  CHI_mars_city_building_chain_start_tt: "Isso iniciará a cadeia de eventos de construção da cidade em Marte.§!"
  CHI_arunachal_border_conflict_TT: "Isso habilitará a guerra de fronteira em Arunachal com §B[RAJ.GetName]§!"
- arunachal_tension_TT: "Tensão é superior a 80"
- arunachal_readiness_TT: "Nossa prontidão é superior a 60"
+ arunachal_tension_TT: "A tensão é maior que 80"
+ arunachal_readiness_TT: "Nossa prontidão é maior que 60"
  arunachal_increase_readiness_TT: "§GIsso aumentará nossa prontidão§!"
  arunachal_increase_tension_TT: "§YIsso aumentará a tensão na fronteira§!"
  not_attacking_on_arunachal_TT: "Atualmente atacando ou se preparando para um ataque"
- more_than_50_arunachal_progress_TT: "Progresso do conflito superior a 50"
- more_than_80_arunachal_progress_TT: "Progresso do conflito superior a 80"
+ more_than_50_arunachal_progress_TT: "Mais de 50 conflitos em andamento"
+ more_than_80_arunachal_progress_TT: "Mais de 80 conflitos em andamento"
  arunachal_readiness_minus_10_TT: "§RIsso diminuirá nossa prontidão em 10§!"
  Arunachal_war_increase_progress_10_TT: "§GIsto aumentará nosso progresso em 10§!"
  Arunachal_war_increase_progress_5_TT: "§RIsto aumentará nosso progresso em 5§!"
