--- a/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
@@ -2170,3 +2170,4 @@
  modifier_production_speed_anti_air_building_factor_desc: "改变$anti_air_building$的建造速度。"
  modifier_production_speed_radar_station_factor_desc: "改变$radar_station$的建造速度。"
  modifier_production_speed_internet_station_factor_desc: "改变$internet_station$的建造速度"
+ energy_use_modifier_agriculture_district: "§Y$agriculture_district$§!能源消耗"
