--- a/localisation/braz_por/replace/replaced_from_vanilla_modifiers_l_braz_por.yml
+++ b/localisation/braz_por/replace/replaced_from_vanilla_modifiers_l_braz_por.yml
@@ -99,7 +99,7 @@
  return_on_investment_modifier: "£return_on_investment_modifier_texticon §YRetorno sobre Investimento§!"
  population_tax_income_multiplier_modifier: "£population_tax_income_multiplier_modifier_texticon §YReceita de Impostos Populacionais§! Multiplicador"
  corporate_tax_income_multiplier_modifier: "£corporate_tax_income_multiplier_modifier_texticon §YReceita de Impostos Corporativos§! Multiplicador"
- office_park_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$escritórios$§! Multiplicador de Receita de Impostos"
+ office_park_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$offices$§! Multiplicador de Receita de Impostos"
  dockyard_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$estaleiro$§! Multiplicador de Receita de Impostos"
  military_industry_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$fábrica_de_armas$§! Multiplicador de Receita de Impostos"
  civilian_industry_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$complexo_industrial$§! Multiplicador de Receita de Impostos"
@@ -2170,3 +2170,4 @@
  modifier_production_speed_anti_air_building_factor_desc: "Modifica a velocidade de construção da $anti_air_building$."
  modifier_production_speed_radar_station_factor_desc: "Modifica a velocidade de construção da $radar_station$."
  modifier_production_speed_internet_station_factor_desc: "Modifica a velocidade de construção da $internet_station$."
+ energy_use_modifier_agriculture_district: "§Y$agriculture_district$§! Consumo de Energia"
