--- a/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
+++ b/localisation/french/replace/replaced_from_vanilla_modifiers_l_french.yml
@@ -2170,3 +2170,4 @@
  modifier_production_speed_anti_air_building_factor_desc: "Modifie la vitesse de construction de $anti_air_building$."
  modifier_production_speed_radar_station_factor_desc: "Modifie la vitesse de construction de $radar_station$."
  modifier_production_speed_internet_station_factor_desc: "Modifie la vitesse de construction de $internet_station$."
+ energy_use_modifier_agriculture_district: "Consommation d'énergie des §Y$agriculture_district$§!"
