--- a/localisation/polish/MD_tooltips_l_polish.yml
+++ b/localisation/polish/MD_tooltips_l_polish.yml
@@ -472,7 +472,7 @@
  CHI_mars_city_building_chain_start_tt: "§YTo rozpocznie łańcuch wydarzeń związanych z budową miasta Mars.§!"
  CHI_arunachal_border_conflict_TT: "§YUmożliwi to wojnę graniczną Arunachal z§! §B[RAJ.GetName]§!"
  arunachal_tension_TT: "Napięcie jest wyższe niż 80"
- arunachal_readiness_TT: "Nasza Gotowość jest wyższa niż 60"
+ arunachal_readiness_TT: "Nasza gotowość jest wyższa niż 60"
  arunachal_increase_readiness_TT: "§GTo zwiększy naszą gotowość§!"
  arunachal_increase_tension_TT: "§YTo zwiększy napięcie graniczne§!"
  not_attacking_on_arunachal_TT: "Aktualnie atakujesz lub przygotowujesz atak"
