--- a/localisation/russian/MD_focus_SUB_l_russian.yml
+++ b/localisation/russian/MD_focus_SUB_l_russian.yml
@@ -441,7 +441,7 @@
  TAT_tatar_kommi7_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£stability_texticon Стабильность: §R-7.00%§!\n£emerging_outlook_campaign_cost_modifier_texticon Ежедневная поддержка реакционеров: §G+0.05%§!\n£education_cost_multiplier_modifier_texticon Множитель §Yрасходов на образование§!: §R+5.00%§!\n\n"
  TAT_tatar_kommi8_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£research_speed_texticon Скорость исследовани: §G+10.00%§!\n\n"
  TAT_tatar_kommi9_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£social_cost_multiplier_modifier_texticon Множитель §Yсоциальных расходов§!: §R+5.00%§!\n£health_cost_multiplier_modifier_texticon Множитель §Yрасходов на здравоохранение§!: §R+5.00%§!\n£efficiency_growth_texticon Рост эффективности производства: §G+5.00%§!\n£construction_speed_texticon Местная скорость строительства: §G+5.00%§!\n\n"
- TAT_tatar_kommi10_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n$MODIFIER_PRODUCTION_FACTORY_EFFICIENCY_GAIN_FACTOR$: §G+10.00%§!\n$STATE_PRODUCTION_SPEED_BUILDINGS_FACTOR$: §G+10.00%§!\n\n"
+ TAT_tatar_kommi10_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£efficiency_growth_texticon Рост эффективности производства: §G+10.00%§!\n£construction_speed_texticon Скорость местного строительства: §G+10.00%§!\n\n"
  TAT_tatar_kommi11_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£resources_texticon  Эффективность увеличения ресурсов: §G+5.00%§!\n\n"
  TAT_tatar_kommi12_tt: "$TAT_tatar_kommi_modifier_tt_intro$ \n £consumer_goods_texticon  Величина налога: §R-2.00%§!\n$communism_drift$: §G+0.05%§!\n\n"
  TAT_tatar_kommi13_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n$nationalist_drift$: §R-0.03%§!\n\n"
@@ -465,7 +465,7 @@
  TAT_tatarin_nati14_tt: "$TAT_tatarin_nati_modifier_tt_intro$\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+2.00%§!\n£consumer_goods_texticon  Величина налога: §R-7.00%§!\n\n"
  TAT_tatarin_nati15_tt: "$TAT_tatarin_nati_modifier_tt_intro$\n$MODIFIER_war_support_modifier$: §G+3.00%§!\n\n"
  TAT_tatarin_nati16_tt: "$TAT_tatarin_nati_modifier_tt_intro$\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+10.00%§!\n$MODIFIERS_ARMY_ATTACK_FACTOR$: §G+3.00%§!\n$MODIFIERS_ARMY_DEFENCE_FACTOR$: §G+3.00%§!\n\n"
- TAT_tatarin_nati17_tt: "$TAT_tatarin_nati_modifier_tt_intro$\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+10.00%§!\n$personnel_cost_multiplier_modifier$: §R+15.00%§!\n$MODIFIER_production_speed_arms_factory_factor$: §G+8.00%§!\n\n"
+ TAT_tatarin_nati17_tt: "$TAT_tatarin_nati_modifier_tt_intro$\n£manpower_texticon Привлекаемое население: §G+10.00%§!\n£personnel_cost_multiplier_modifier_texticon §YВоенные расходы§! Множитель: §R+15.00%§!\n£construction_speed_milfactory_texticon §YВоенный завод§! скорость строительства: §G+8.00%§!\n\n"
  TAT_tatarin_nati18_tt: "$TAT_tatarin_nati_modifier_tt_intro$\n$MODIFIER_ARMY_LEADER_COST_FACTOR$: §G-12.00%§!\n$MODIFIERS_ARMY_ATTACK_FACTOR$: §G+3.00%§!\n$MODIFIERS_ARMY_DEFENCE_FACTOR$: §G+3.00%§!\n\n"
  TAT_tatarin_nati19_tt: "$TAT_tatarin_nati_modifier_tt_intro$\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+3.00%§!\n\n"
  TAT_tatarin_nati20_tt: "$TAT_tatarin_nati_modifier_tt_intro$\n£research_speed_texticon Скорость исследовани: §G+10.00%§!\n\n"
@@ -1600,7 +1600,7 @@
  BSH_tatarin_nati14_tt: "$BSH_tatarin_nati_modifier_tt_intro$ \n  £political_power_texticon  Political Power Gain: §G+2.00%§! \n £consumer_goods_texticon  Tax Cost: §R-7.00%§! \n\n"
  BSH_tatarin_nati15_tt: "$BSH_tatarin_nati_modifier_tt_intro$ \n £war_support_modifiericons_texticon  War Support: §G+3.00%§! \n\n"
  BSH_tatarin_nati16_tt: "$BSH_tatarin_nati_modifier_tt_intro$ \n £manpower_texticon  Recruitable Population: §G+10.00%§! \n £attack_texticon  Division Attack: §G+3.00%§! \n £defence_texticon  Division Defense: §G+3.00%§!  \n\n"
- BSH_tatarin_nati17_tt: "$BSH_tatarin_nati_modifier_tt_intro$ \n £manpower_texticon  Recruitable Population: §G+10.00%§! \n £personnel_cost_multiplier_modifier_texticon §YMilitary Cost§! Multiplier: §R+15.00%§! \n £construction_speed_milfactory_texticon  §YMilitary Factory§! construction speed: §G+8.00%§!  \n\n"
+ BSH_tatarin_nati17_tt: "$BSH_tatarin_nati_modifier_tt_intro$ \n £manpower_texticon  Привлекаемое население: §G+10.00%§! \n £personnel_cost_multiplier_modifier_texticon §YВоенные расходы§! Множитель: §R+15.00%§! \n £construction_speed_milfactory_texticon  §YВоенный завод§! скорость строительства: §G+8.00%§! \n\n"
  BSH_tatarin_nati18_tt: "$BSH_tatarin_nati_modifier_tt_intro$ \n£army_leader_cost_texticon  Army Leader Cost: §G-12.00%§! \n £attack_texticon  Division Attack: §G+3.00%§! \n £defence_texticon  Division Defense: §G+3.00%§! \n\n"
  BSH_tatarin_nati19_tt: "$BSH_tatarin_nati_modifier_tt_intro$ \n£manpower_texticon  Recruitable Population: §G+3.00%§! \n\n"
  BSH_tatarin_nati20_tt: "$BSH_tatarin_nati_modifier_tt_intro$ \n£research_speed_texticon  Research Speed: §G+10.00%§! \n\n"
@@ -1616,8 +1616,8 @@
  BSH_tatar_kommi6_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £manpower_texticon  Recruitable Population: §G+5.00%§!  \n\n"
  BSH_tatar_kommi7_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £stability_texticon  Stability: §R-7.00%§! \n £emerging_outlook_campaign_cost_modifier_texticon Ежедневная поддержка реакционеров: §G+0.05%§! \n £education_cost_multiplier_modifier_texticon Множитель §Yрасходов на образование§!: §R+5.00%§! \n\n"
  BSH_tatar_kommi8_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £research_speed_texticon  Research Speed: §G+10.00%§!  \n\n"
- BSH_tatar_kommi9_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £social_cost_multiplier_modifier_texticon §YSocial Spending Cost§! Multiplier: §R+5.00%§! \n £health_cost_multiplier_modifier_texticon §YHealth Cost§! Multiplier: §R+5.00%§! \n £efficiency_growth_texticon  Production Efficiency growth: §G+5.00%§! \n £construction_speed_texticon  Local Construction Speed: §G+5.00%§!\n\n"
- BSH_tatar_kommi10_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £efficiency_growth_texticon  Production Efficiency growth: §G+10.00%§! \n £construction_speed_texticon  Local Construction Speed: §G+10.00%§!\n\n"
+ BSH_tatar_kommi9_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £social_cost_multiplier_modifier_texticon §YСтоимость социальных расходов§! Множитель: §R+5.00%§! \n £health_cost_multiplier_modifier_texticon §YСтоимость здоровья§! Множитель: §R+5.00%§! \n £efficiency_growth_texticon  Рост эффективности производства: §G+5.00%§! \n £construction_speed_texticon  Скорость местного строительства: §G+5.00%§!\n\n"
+ BSH_tatar_kommi10_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £efficiency_growth_texticon  Рост эффективности производства: §G+10.00%§! \n £construction_speed_texticon  Скорость местного строительства: §G+10.00%§!\n\n"
  BSH_tatar_kommi11_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £resources_texticon  Resource Gain Efficiency: §G+5.00%§! \n\n"
  BSH_tatar_kommi12_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £consumer_goods_texticon  Tax Cost: §R-2.00%§! \n £emerging_outlook_campaign_cost_modifier_texticon Daily Emerging Support: §G+0.05%§! \n\n"
  BSH_tatar_kommi13_tt: "$BSH_tatar_kommi_modifier_tt_intro$ \n £nationalist_outlook_campaign_cost_modifier_texticon Daily Nationalist Support: §R-0.03%§! \n\n"
