--- a/localisation/russian/MD_tooltips_l_russian.yml
+++ b/localisation/russian/MD_tooltips_l_russian.yml
@@ -476,8 +476,8 @@
  arunachal_increase_readiness_TT: "§GЭто повысит нашу готовность§!"
  arunachal_increase_tension_TT: "§YЭто усилит напряжённость на границе§!"
  not_attacking_on_arunachal_TT: "В настоящее время атакует или готовится к атаке"
- more_than_50_arunachal_progress_TT: "Более 50 конфликтов в прогрессе"
- more_than_80_arunachal_progress_TT: "Более 80 конфликтов в прогрессе"
+ more_than_50_arunachal_progress_TT: "Более 50 прогресса конфликта"
+ more_than_80_arunachal_progress_TT: "Более 80 прогресса конфликта"
  arunachal_readiness_minus_10_TT: "§RЭто уменьшит нашу готовность на 10§!"
  Arunachal_war_increase_progress_10_TT: "§GЭто увеличит наш прогресс на 10§!"
  Arunachal_war_increase_progress_5_TT: "§RЭто увеличит наш прогресс на 5§!"
