--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -243,7 +243,7 @@
  HOL_office_park_income_tax_modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$offices$§! Tax Revenue Multiplier"
  HOL_office_park_income_tax_modifier_tt: "£corporate_tax_income_multiplier_modifier_texticon §Y$offices$§! Tax Revenue Multiplier: [?HOL_office_park_income_tax_modifier_change|%+] \n "
  HOL_buildings_worker_requirement_modifier: "All Buildings Worker Requirements"
- HOL_buildings_worker_requirement_modifier_tt: "All Buildings Worker Requirements: [?HOL_buildings_worker_requirement_modifier_change|%+] \n "
+ HOL_buildings_worker_requirement_modifier_tt: "All Buildings Worker Requirements: [?HOL_buildings_worker_requirement_modifier_change|%-] \n "
  HOL_corruption_cost_factor: "£corruption_cost_factor_texticon Cost to change Corruption"
  HOL_corruption_cost_factor_tt: "£corruption_cost_factor_texticon Cost to change Corruption: [?HOL_corruption_cost_factor_change|%+] \n "
  ### Events
